Changed to NASA API

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Slider - Default functionality</title>
+  <title>NASA images</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -11,48 +11,47 @@
   <script>
     'use strict';
     $(document).ready(function() {
-      var form = $( ' #form-id ' );
-      var urlStr = 'http://pokeapi.co/api/v2/pokemon/';
-      var target = $( ' #target ' );
-
-
-        var handle = $( "#custom-handle" );
-        $( "#slider" ).slider({
-          min: 1,
-          max: 721, 
-          create: function() {
-            handle.text( $( this ).slider( "value" ) );
-          },
-          slide: function( event, ui ) {
-            handle.text( ui.value );
-          }
-        });
+      var form = $('#form-id');
+      var nasaUrl = 'https://api.nasa.gov/mars-photos/api/v1/rovers/curiosity/photos?camera=navcam&api_key=DEMO_KEY&sol=';
+      var images = $('#images');
+      var handle = $('#custom-handle');
+      $( "#slider" ).slider({
+        min: 1,
+        max: 4500, 
+        create: function() {
+          handle.text( $( this ).slider('value'));
+        },
+        slide: function( event, ui ) {
+          handle.text( ui.value );
+        }
+      });
+      
       form.on('submit',function(e,value) {
-          e.preventDefault(); //need this shit!!!
-console.log();
-          $.ajax({
-            url: urlStr + handle[0].innerHTML,
-            success: function(data) {
-              console.log(data)
-              target[0].innerHTML += data.name + data.sprites.front_default;
-            console.log(target[0]);
-
-            }
-          })
-          // getData(urlStr + 2);
-        });
-
+        e.preventDefault(); 
+        $.ajax({
+          url: nasaUrl + handle[0].innerHTML,
+          success: function(data) {
+            console.log(data);
+            $.each(data, function(i, item) {
+              console.log(item);
+              for(var j=0;j< data.photos.length ;j++) {
+                console.log(data.photos[j].img_src);
+              }
+            });
+          }
+        })
+      });
     });
   </script>
 </head>
 <body>
-  <h1 class="center-position">Slider For Pokemon!</h1>
+  <h1 class="center-position">Slider Example</h1>
   <form id="form-id">
     <div id="slider">
       <div id="custom-handle" class="ui-slider-handle"></div>
     </div>
-    <input class="" type="submit" value="search">
+    <input class="" type="submit" value="Submit">
   </form> 
-  <div id="target"></div>
+ <div id="images"></div>
 </body>
 </html>
